# cmake_tutorial

jianshu_sqrt/: CMakeLists.txt  Config.cmake.in  MultiCPackConfig.cmake  README.txt  tutorial.cxx
jianshu_sqrt/MathFunctions/: CMakeLists.txt  MathFunctions.cxx  mysqrt.cxx  mysqrt.h
jianshu_sqrt/MathFunctions.CustomCommand.GeneratedFile/: CMakeLists.txt  MakeTable.cxx  mysqrt.cxx
jianshu_sqrt/debug/: compile_command.sh
jianshu_sqrt/release/: compile_command.sh
